--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@astrojs/svelte": "^4.0.3",
     "@astrojs/tailwind": "^5.0.2",
     "@astrojs/ts-plugin": "^1.3.1",
-    "@daks.dev/astro.sdk": "^0.1.8",
+    "@daks.dev/astro.sdk": "^0.1.9",
     "@nanostores/persistent": "^0.9.1",
     "@playwright/test": "^1.39.0",
     "@rollup/plugin-yaml": "^4.1.2",
@@ -46,6 +46,7 @@
     "autoprefixer": "^10.4.16",
     "cssnano": "^6.0.1",
     "cssnano-preset-advanced": "^6.0.1",
+    "dotenv": "^16.3.1",
     "nanostores": "^0.9.4",
     "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
